src/riot-rs-macros/tests/ui/spawner/no_autostart_param.stderr
error: custom attribute panicked
 --> tests/ui/spawner/no_autostart_param.rs:9:1
  |
9 | #[riot_rs::spawner]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = help: message: the `autostart` parameter must be provided
